fix wrap on large single-word tweets

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -30,6 +30,7 @@ article>* {
   border-right-width: 0px;
   border-color: black;
   border-style: solid;
+  overflow-wrap: break-word;
 }
 
 .tweet-footer {
